--- a/templates/base.html
+++ b/templates/base.html
@@ -1184,7 +1184,9 @@
     <script type="text/javascript" src="{% static 'vendor/datatables/responsive.bootstrap5.min.js' %}"></script>
 
     <!-- SweetAlert2 - محلي -->
-    <script src="{% static 'vendor/sweetalert2/sweetalert2.all.min.js' %}"></script>    <!-- Custom JS -->
+    <script src="{% static 'vendor/sweetalert2/sweetalert2.all.min.js' %}"></script>
+    
+    <!-- Custom JS -->
     <script src="{% static 'js/main.js' %}"></script>
     <script src="{% static 'js/smooth-navigation.js' %}"></script>
     
