--- a/orders/templates/orders/order_detail.html
+++ b/orders/templates/orders/order_detail.html
@@ -12,21 +12,25 @@
             <a href="{% url 'orders:order_list' %}" class="btn btn-secondary">
                 <i class="fas fa-arrow-right"></i> العودة للقائمة
             </a>
-            {% if order.creation_method == 'wizard' %}
-                <a href="{% url 'orders:wizard_edit_options' order.pk %}" class="btn btn-primary">
-                    <i class="fas fa-magic"></i> تعديل الطلب (ويزارد)
-                </a>
-            {% else %}
-                <a href="{% url 'orders:wizard_edit_options' order_pk=order.pk %}" class="btn btn-primary">
-                    <i class="fas fa-edit"></i> تعديل الطلب
-                </a>
+            {% if perms.orders.change_order and not user.is_salesperson %}
+                {% if order.creation_method == 'wizard' %}
+                    <a href="{% url 'orders:wizard_edit_options' order.pk %}" class="btn btn-primary">
+                        <i class="fas fa-magic"></i> تعديل الطلب (ويزارد)
+                    </a>
+                {% else %}
+                    <a href="{% url 'orders:wizard_edit_options' order_pk=order.pk %}" class="btn btn-primary">
+                        <i class="fas fa-edit"></i> تعديل الطلب
+                    </a>
+                {% endif %}
             {% endif %}
             <button type="button" class="btn btn-success" onclick="printInvoice('{{ order.order_number }}')">
                 <i class="fas fa-print"></i> طباعة الفاتورة
             </button>
-            <a href="{% url 'orders:order_delete' order.pk %}" class="btn btn-danger">
-                <i class="fas fa-trash"></i> حذف الطلب
-            </a>
+            {% if user.is_superuser %}
+                <a href="{% url 'orders:order_delete' order.pk %}" class="btn btn-danger">
+                    <i class="fas fa-trash"></i> حذف الطلب
+                </a>
+            {% endif %}
         </div>
     </div>
 
