--- a/inventory/templates/inventory/product_list.html
+++ b/inventory/templates/inventory/product_list.html
@@ -9,6 +9,10 @@
             <a href="{% url 'inventory:dashboard' %}" class="btn btn-secondary">
                 <i class="fas fa-tachometer-alt"></i> لوحة التحكم
             </a>
+            
+            <a href="{% url 'inventory:export_products_excel' %}" class="btn btn-success">
+                <i class="fas fa-file-excel"></i> تصدير Excel
+            </a>
 
             <a href="{% url 'inventory:product_create' %}" class="btn btn-primary">
                 <i class="fas fa-plus"></i> إضافة منتج
