feat: Add export permission control for users
- Added can_export field to User model
- Updated admin panel to show can_export in list_display, list_filter, and fieldsets
- Created migration 0047_add_can_export_field
- Added permission check in export_products_excel view
- Updated template to hide entire export dropdown for users without permission
- Fixed template syntax errors (split if statements)

Now only users with can_export=True can see and use export functionality

--- a/inventory/templates/inventory/product_list_new_icons.html
+++ b/inventory/templates/inventory/product_list_new_icons.html
@@ -83,6 +83,8 @@
             <!-- QR Actions -->
 
 
+
+            {% if user.can_export %}
             <div class="dropdown">
                 <button class="btn btn-secondary dropdown-toggle" type="button" id="exportDropdown"
                     data-bs-toggle="dropdown" aria-expanded="false">
@@ -95,6 +97,7 @@
                     <li><a class="dropdown-item" href="#"><i class="fas fa-print"></i> طباعة</a></li>
                 </ul>
             </div>
+            {% endif %}
             <a href="{% url 'inventory:product_create' %}" class="btn btn-success">
                 <i class="fas fa-plus"></i> إضافة منتج
             </a>
